# django-declarative-apis

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  contributing.md  manage.py  pull_request_template.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.md  tox.ini
.github/: dependabot.yml
.github/workflows/: publish-release.yml  release.yml  tests.yml
django_declarative_apis/: .gitignore  adapters.py  events.py  models.py
django_declarative_apis/authentication/: __init__.py
django_declarative_apis/authentication/oauthlib/: endpoint.py  oauth1.py  oauth_errors.py  request_validator.py
django_declarative_apis/machinery/: __init__.py  attributes.py  errors.py  filtering.py  tasks.py  utils.py
django_declarative_apis/management/commands/: gendocs.py
django_declarative_apis/migrations/: 0001_initial.py  0002_add_consumer_type_field.py
django_declarative_apis/resources/: emitters.py  resource.py  utils.py
docs/: Makefile
docs/source/: aggregates.rst  auth.rst  conf.py  consumer.rst  endpoint_definitions.rst  endpoint_resource.rst  fields.rst  filters.rst  index.rst  overview.rst  quickstart.rst  resource_adapter.rst  resources.rst  tasks.rst
example/: Makefile  manage.py  requirements-dev.txt  requirements.txt
example/example/: settings.py  urls.py  wsgi.py
example/myapp/: admin.py  apps.py  models.py  resources.py  tests.py  urls.py  views.py
example/myapp/migrations/: 0001_initial.py
example/myapp/tests/: test_models.py  test_responses.py  testutils.py
tests/: filters.py  models.py  settings.py  test_adapters.py  test_events.py  test_filters.py  test_models.py  tests.py  testutils.py  urls.py  views.py
tests/authentication/: test_endpoint.py
tests/authentication/oauthlib/: test_oauth1.py  test_oauth_errors.py  test_request_validator.py
tests/machinery/: test_attributes.py  test_base.py  test_errors.py
tests/resources/: test_emitters.py  test_resource.py  test_utils.py
